--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -143,7 +143,7 @@ body {
 
 .main-content {
   flex: 1 0 auto;
-  padding-top: 100px; // Для двухрядного хедера
+  padding-top: 100px;
   width: 100%;
   overflow: hidden;
 
